[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "sfpy-asm"
version = "0.1.0"
description = "Experimental GCC/GAS inline assembly bridge for Python"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"

[tool.setuptools]
packages = ["sfpy"]
